--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
+    "dev:3000": "next dev -p 3000",
+    "dev:8080": "next dev -p 8080",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,9 +17,12 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.2.0",
     "next": "14.0.4",
+    "node-xmlrpc": "^1.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.5.0",
+    "xmlrpc": "^1.3.2",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
